<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuestionarioActivity">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/currentQuestionTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pregunta1"
                android:textColor="#E6000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalQuestionsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max"
                android:textColor="#80000000"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:layout_toStartOf="@+id/quizTimer"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/timer"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="3dp"/>

        <TextView
            android:id="@+id/quizTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:text="@string/count"
            android:textColor="#00BCD4"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_below="@+id/topBar"
        android:layout_marginTop="10dp"
        android:background="#66FFFFFF"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_back_secondary_100"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/nextQ"
        android:textAllCaps="false"
        android:textColor="#050505" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nextQuestionBtn"
        android:layout_below="@id/divider"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/questionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/option1Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/round_back_white50_10">

                <TextView
                    android:id="@+id/option1TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="15sp"
                    android:layout_marginBottom="15sp"
                    android:layout_toStartOf="@+id/option1Icon"
                    android:text="@string/opcion1"
                    android:textColor="#101010" />

                <ImageView
                    android:id="@+id/option1Icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/round_back_white50_100" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/option2Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_back_white50_10">

                <TextView
                    android:id="@+id/option2TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="15sp"
                    android:layout_marginBottom="15sp"
                    android:layout_toStartOf="@+id/option2Icon"
                    android:text="@string/opcion2"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/option2Icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/round_back_white50_100" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/option3Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_back_white50_10">

                <TextView
                    android:id="@+id/option3TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="15sp"
                    android:layout_marginBottom="15sp"
                    android:layout_toStartOf="@+id/option3Icon"
                    android:text="@string/opcion3"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/option3Icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/round_back_white50_100" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/option4Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_back_white50_10">

                <TextView
                    android:id="@+id/option4TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="15sp"
                    android:layout_marginEnd="15sp"
                    android:layout_marginBottom="15sp"
                    android:layout_toStartOf="@+id/option4Icon"
                    android:text="@string/opcion4"
                    android:textColor="#000000" />

                <ImageView
                    android:id="@+id/option4Icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/round_back_white50_100" />
            </RelativeLayout>

            <!---Option 1 Layout-->

            <!---Option 2 Layout-->

            <!---Option 3 Layout-->

            <!---Option 4 Layout-->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>